--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_LASTFM_API_KEY=f0399d309b716b89d4e5cded41f5a8d4
-REACT_APP_YOUTUBE_API_KEY=AIzaSyC9rdXHIi90FbyatXr_fZcuzWIEcgd9Ip4
+REACT_APP_LASTFM_API_KEY= "Insert your own Last.FM API Key"
+REACT_APP_YOUTUBE_API_KEY= "Insert your Youtube API Key"
